# django-automated-logging

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  prospector.yaml  pyproject.toml  requirements.dev.txt  requirements_dev.txt  setup.py  test_env.txt
.github/workflows/: python-test.yml
automated_logging/: __init__.py  admin.py  apps.py  decorators.py  handlers.py  helpers.py  middleware.py  models.py  settings.py  tests.py  todo  urls.py  views.py
automated_logging/admin/: base.py  model_entry.py  model_event.py  model_mirror.py  request_event.py  unspecified_event.py
automated_logging/helpers/: __init__.py  enums.py  exceptions.py  schemas.py
automated_logging/migrations/: 0001_initial.py  0002_auto_20180215_1540.py  0003_auto_20180216_0900.py  0004_auto_20180216_0935.py  0005_auto_20180216_0941.py  0006_auto_20180216_1004.py  0007_auto_20180216_1005.py  0008_auto_20180216_1005.py  0009_auto_20180216_1006.py  0010_auto_20180216_1430.py  0011_auto_20180216_1545.py  0012_auto_20180218_1101.py  0013_auto_20180218_1106.py  0014_auto_20180219_0859.py  0015_auto_20181229_2323.py  0016_auto_20200620_1813.py  0016_auto_20200803_1917.py  0017_auto_20200620_1817.py  0017_auto_20200819_1004.py  0018_auto_20200701_2207.py  0018_decoratoroverrideexclusiontest_foreignkeytest_fullclassbasedexclusiontest_fulldecoratorbasedexclusio.py  0019_auto_20200723_1313.py
automated_logging/signals/: __init__.py  database.py  m2m.py  request.py  save.py
automated_logging/signals/.old/: __init__.py  admin.py  adminV2.py  database.py  handlers.py  request.py
automated_logging/tests/: base.py  helpers.py  models.py  test_exclusion.py  test_handler.py  test_m2m.py  test_misc.py  test_request.py  test_save.py  tests.BAK.py
django_automated_logging.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
logtest/: .coveragerc  manage.py
logtest/logtest/: settings.py  urls.py  wsgi.py
logtest/testmodels/: apps.py  models.py  urls.py  views.py
logtest/testmodels/migrations/: 0001_initial.py  0002_auto_20180216_0954.py  0003_auto_20180216_1430.py  0004_exclusiontext.py
tests/: run.py  settings.py
