[tool.poetry]
name = "django-automated-logging"
version = "6.0.0"
description = "Django Database Based Automated Logging - finally solved and done in a proper way."
authors = ["Bilal Mahmoud <bilalmahmoud@posteo.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
django = "^3.0 || ^2.2"
marshmallow = "^3.6.1"
django-picklefield = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
django-admin-generator = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
