[tool.poetry]
name = "django-automated-logging"
version = "6.1.3"
description = "Django Database Based Automated Logging - finally solved and done in a proper way."
authors = ["Bilal Mahmoud <bilalmahmoud@posteo.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/indietyp/django-automated-logging"
repository = "https://github.com/indietyp/django-automated-logging"
keywords = ['django', 'automation', 'tools', 'backend', 'logging']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 2.2',
    'Framework :: Django :: 3.0',
    'Framework :: Django :: 3.1',
    'Framework :: Django :: 3.2',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
packages = [{include = "automated_logging"}]

[tool.poetry.dependencies]
python = ">=3.6, <4"
django = "^3.0 || ^2.2 || ^3.1 || ^3.2"
marshmallow = "^3.6.1"
django-picklefield = "^3.0.1"
django-ipware = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
django-admin-generator = "^2.2.0"
psycopg2-binary = "^2.8.5"
pytz = "^2020.1"
coverage = "^5.3"
coveralls = "^2.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
