[tool.poetry]
name = "django-automated-logging"
version = "6.2.2"
description = "Django Database Based Automated Logging - finally solved and done in a proper way."
authors = ["Bilal Mahmoud <bilalmahmoud@posteo.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/indietyp/django-automated-logging"
repository = "https://github.com/indietyp/django-automated-logging"
keywords = ['django', 'automation', 'tools', 'backend', 'logging']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 2.2',
    'Framework :: Django :: 3.0',
    'Framework :: Django :: 3.1',
    'Framework :: Django :: 3.2',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
packages = [{include = "automated_logging"}]

[tool.poetry.dependencies]
python = ">=3.10, <4"
django = ">=3.2, <6"
marshmallow = "^3.21.1"
django-picklefield = "^3.1"
django-ipware = "^6.0.4"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
django-admin-generator = "^2.6.0"
psycopg2-binary = "^2.9.9"
pytz = "^2024.1"
coverage = "<7.0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
